增加读取数据按包读取

--- a/views/cssjs.html
+++ b/views/cssjs.html
@@ -1,5 +1,6 @@
 <!-- ========== Css Files ========== -->
 <link href="../static/css/root.css" rel="stylesheet">
+<link href="https://cdn.bootcss.com/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
 
 <!-- 
 jQuery Library
@@ -70,6 +71,7 @@ Rickshaw
 <!-- 
 Moment.js
 -->
+<script src="https://cdn.bootcss.com/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js"></script>
 <script type="text/javascript" src="../static/js/moment/moment.min.js"></script>
 <script src="../static/js/md5.js"></script>
 <script src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
